# google-domain-checker

./: .pylintrc  README.md  pyproject.toml  renovate.json
.github/actions/setup-workspace/: action.yaml
.github/workflows/: code-analysis.yaml
src/: checker.py  colors.py  main.py
tests/: test_checker.py
